// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should renderer a link home in isolated mode 1`] = `
<Styled(ToolbarButton)
  href="/#pizza"
  testId="Pizza-isolate-button"
  title="Show all components"
>
  <MdFullscreenExit />
</Styled(ToolbarButton)>
`;

exports[`should renderer a link to example isolated mode 1`] = `
<Styled(ToolbarButton)
  href="/#!/Pizza/3"
  testId="Pizza-3-isolate-button"
  title="Open isolated"
>
  <MdFullscreen />
</Styled(ToolbarButton)>
`;

exports[`should renderer a link to isolated mode 1`] = `
<Styled(ToolbarButton)
  href="/#!/Pizza"
  testId="Pizza-isolate-button"
  title="Open isolated"
>
  <MdFullscreen />
</Styled(ToolbarButton)>
`;
